Update CNC Milling Machine - CME FS-4.html

--- a/Manufacturing/CNC Milling Machine - CME FS-4/CNC Milling Machine - CME FS-4.html
+++ b/Manufacturing/CNC Milling Machine - CME FS-4/CNC Milling Machine - CME FS-4.html
@@ -24,9 +24,9 @@
             CNC Milling Machine - CME FS-4
         </h3>
         <div>
-        <img class="animate__animated animate__zoomIn" src="CNC Milling Machine - CME FS-4.png" alt="machine" style="width: 437px; height: 236px; ;position: absolute; top: 240px; left: 20%;">
+       <img class="animate__animated animate__zoomIn" src="CNC Milling Machine - CME FS-4.png" alt="machine" style="width: 437px; height: 236px; ;position: absolute; top: 35%; left: 15%;">
         </div>
-        <div class="animate__animated animate__zoomIn" style="position: absolute; top: 240px; left: 60%;">
+        <div class="animate__animated animate__zoomIn" style="position: absolute; top: 35%; left: 55%;">
             <h4 class="features">Features</h4>
         <h4 class="machine4">
             <li>Revolving table Ø 600 mm.</li>
